[gd_scene load_steps=2 format=3 uid="uid://b0wdj8v6o0wq0"]

[ext_resource type="Script" uid="uid://bpg1x5ecvctqc" path="res://scenes/menu/explore_menu.gd" id="1_klgdb"]

[node name="Window" type="Window"]
transparent_bg = true
size = Vector2i(690, 500)
borderless = true
transparent = true
popup_window = true
script = ExtResource("1_klgdb")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchor_right = 1.083
anchor_bottom = 1.0
offset_right = -53.95
grow_horizontal = 2
grow_vertical = 2

[node name="select_effect" type="TabContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -345.0
offset_top = -250.0
offset_right = 345.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
current_tab = 0

[node name="Time Domain" type="TabContainer" parent="Control/select_effect"]
layout_mode = 2
current_tab = 0
metadata/_tab_index = 0

[node name="Distort" type="VBoxContainer" parent="Control/select_effect/Time Domain"]
layout_mode = 2
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="Control/select_effect/Time Domain/Distort"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="Control/select_effect/Time Domain/Distort/MarginContainer"]
custom_minimum_size = Vector2(660, 425)
layout_mode = 2
size_flags_horizontal = 0
horizontal_scroll_mode = 0

[node name="DistortContainer" type="VBoxContainer" parent="Control/select_effect/Time Domain/Distort/MarginContainer/ScrollContainer"]
custom_minimum_size = Vector2(660, 0)
layout_mode = 2

[node name="Label" type="Label" parent="Control/select_effect/Time Domain/Distort/MarginContainer/ScrollContainer/DistortContainer"]
custom_minimum_size = Vector2(660, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Processes that modify and distort the waveshape of a sound. Many of these distortions find points where the sound crosses zero twice (pseudo-wavecycles) and applies modifications to each wavecycle individually."
autowrap_mode = 3

[node name="MarginContainer4" type="MarginContainer" parent="Control/select_effect/Time Domain/Distort/MarginContainer/ScrollContainer/DistortContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 5

[node name="Extend" type="VBoxContainer" parent="Control/select_effect/Time Domain"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="MarginContainer" type="MarginContainer" parent="Control/select_effect/Time Domain/Extend"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="Control/select_effect/Time Domain/Extend/MarginContainer"]
custom_minimum_size = Vector2(660, 425)
layout_mode = 2
size_flags_horizontal = 0
horizontal_scroll_mode = 0

[node name="ExtendContainer" type="VBoxContainer" parent="Control/select_effect/Time Domain/Extend/MarginContainer/ScrollContainer"]
custom_minimum_size = Vector2(660, 0)
layout_mode = 2

[node name="Label" type="Label" parent="Control/select_effect/Time Domain/Extend/MarginContainer/ScrollContainer/ExtendContainer"]
custom_minimum_size = Vector2(660, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Processes adjust the length of a sound through some form of repetition. Many of these processes invovle some aspect of randomness and so running them multiple times will yeild different results."
autowrap_mode = 3

[node name="MarginContainer4" type="MarginContainer" parent="Control/select_effect/Time Domain/Extend/MarginContainer/ScrollContainer/ExtendContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 5

[node name="Filter" type="VBoxContainer" parent="Control/select_effect/Time Domain"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/select_effect/Time Domain/Filter"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="Control/select_effect/Time Domain/Filter/MarginContainer"]
custom_minimum_size = Vector2(660, 425)
layout_mode = 2
size_flags_horizontal = 0
horizontal_scroll_mode = 0

[node name="FilterContainer" type="VBoxContainer" parent="Control/select_effect/Time Domain/Filter/MarginContainer/ScrollContainer"]
custom_minimum_size = Vector2(660, 0)
layout_mode = 2

[node name="Label" type="Label" parent="Control/select_effect/Time Domain/Filter/MarginContainer/ScrollContainer/FilterContainer"]
custom_minimum_size = Vector2(660, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Filters remove some frequencies from a sound while emphasising others. Many of these processes are filter banks which contain multiple bandpass filters. These can 'tune' a sound by emphasising specified frequencies."
autowrap_mode = 3

[node name="MarginContainer4" type="MarginContainer" parent="Control/select_effect/Time Domain/Filter/MarginContainer/ScrollContainer/FilterContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 5

[node name="Granulate" type="VBoxContainer" parent="Control/select_effect/Time Domain"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="MarginContainer" type="MarginContainer" parent="Control/select_effect/Time Domain/Granulate"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="Control/select_effect/Time Domain/Granulate/MarginContainer"]
custom_minimum_size = Vector2(660, 425)
layout_mode = 2
size_flags_horizontal = 0
horizontal_scroll_mode = 0

[node name="GranulateContainer" type="VBoxContainer" parent="Control/select_effect/Time Domain/Granulate/MarginContainer/ScrollContainer"]
custom_minimum_size = Vector2(660, 0)
layout_mode = 2

[node name="Label" type="Label" parent="Control/select_effect/Time Domain/Granulate/MarginContainer/ScrollContainer/GranulateContainer"]
custom_minimum_size = Vector2(660, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Processes that split sounds into tiny chunks (grains) and processes each grain individually, Depending on how grains are processed, ordered and layerd many different effects can be achieved. "
autowrap_mode = 3

[node name="MarginContainer4" type="MarginContainer" parent="Control/select_effect/Time Domain/Granulate/MarginContainer/ScrollContainer/GranulateContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 5

[node name="Misc" type="VBoxContainer" parent="Control/select_effect/Time Domain"]
visible = false
layout_mode = 2
metadata/_tab_index = 4

[node name="MarginContainer" type="MarginContainer" parent="Control/select_effect/Time Domain/Misc"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="Control/select_effect/Time Domain/Misc/MarginContainer"]
custom_minimum_size = Vector2(660, 425)
layout_mode = 2
size_flags_horizontal = 0
horizontal_scroll_mode = 0

[node name="MiscContainer" type="VBoxContainer" parent="Control/select_effect/Time Domain/Misc/MarginContainer/ScrollContainer"]
custom_minimum_size = Vector2(660, 0)
layout_mode = 2

[node name="Label" type="Label" parent="Control/select_effect/Time Domain/Misc/MarginContainer/ScrollContainer/MiscContainer"]
custom_minimum_size = Vector2(660, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "These time domain processes do not fit neatly into other categories. Many of these are utilities for editing a soundfile however, several are also transformation processes that manipulate the audio in unique ways."
autowrap_mode = 3

[node name="MarginContainer4" type="MarginContainer" parent="Control/select_effect/Time Domain/Misc/MarginContainer/ScrollContainer/MiscContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 5

[node name="Reverb and Delay" type="VBoxContainer" parent="Control/select_effect/Time Domain"]
visible = false
layout_mode = 2
metadata/_tab_index = 5

[node name="MarginContainer" type="MarginContainer" parent="Control/select_effect/Time Domain/Reverb and Delay"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="Control/select_effect/Time Domain/Reverb and Delay/MarginContainer"]
custom_minimum_size = Vector2(660, 425)
layout_mode = 2
size_flags_horizontal = 0
horizontal_scroll_mode = 0

[node name="ReverbContainer" type="VBoxContainer" parent="Control/select_effect/Time Domain/Reverb and Delay/MarginContainer/ScrollContainer"]
custom_minimum_size = Vector2(660, 0)
layout_mode = 2

[node name="Label" type="Label" parent="Control/select_effect/Time Domain/Reverb and Delay/MarginContainer/ScrollContainer/ReverbContainer"]
custom_minimum_size = Vector2(660, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "These processes apply simple time-based effects to the sound such as reverb and delay. These are commonly used to emulate or give the impression of an acoustic space on a sound."
autowrap_mode = 3

[node name="MarginContainer4" type="MarginContainer" parent="Control/select_effect/Time Domain/Reverb and Delay/MarginContainer/ScrollContainer/ReverbContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 5

[node name="Synthesis" type="VBoxContainer" parent="Control/select_effect/Time Domain"]
visible = false
layout_mode = 2
metadata/_tab_index = 6

[node name="MarginContainer" type="MarginContainer" parent="Control/select_effect/Time Domain/Synthesis"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="Control/select_effect/Time Domain/Synthesis/MarginContainer"]
custom_minimum_size = Vector2(660, 425)
layout_mode = 2
size_flags_horizontal = 0
horizontal_scroll_mode = 0

[node name="SynthesisContainer" type="VBoxContainer" parent="Control/select_effect/Time Domain/Synthesis/MarginContainer/ScrollContainer"]
custom_minimum_size = Vector2(660, 0)
layout_mode = 2

[node name="Label" type="Label" parent="Control/select_effect/Time Domain/Synthesis/MarginContainer/ScrollContainer/SynthesisContainer"]
custom_minimum_size = Vector2(660, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Unlike the other nodes in SoundThread that all process sound, these processes synthesis sounds. These can be used as alternative sound sources but are also very useful as sound sources for testing out various other processes to get a feel for what they do."
autowrap_mode = 3

[node name="MarginContainer4" type="MarginContainer" parent="Control/select_effect/Time Domain/Synthesis/MarginContainer/ScrollContainer/SynthesisContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 5

[node name="Frequency Domain" type="TabContainer" parent="Control/select_effect"]
visible = false
layout_mode = 2
current_tab = 5
metadata/_tab_index = 1

[node name="Convert" type="VBoxContainer" parent="Control/select_effect/Frequency Domain"]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="Control/select_effect/Frequency Domain/Convert"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="Control/select_effect/Frequency Domain/Convert/MarginContainer"]
custom_minimum_size = Vector2(660, 425)
layout_mode = 2
size_flags_horizontal = 0
horizontal_scroll_mode = 0

[node name="PVOCConvertContainer" type="VBoxContainer" parent="Control/select_effect/Frequency Domain/Convert/MarginContainer/ScrollContainer"]
custom_minimum_size = Vector2(660, 0)
layout_mode = 2

[node name="Label" type="Label" parent="Control/select_effect/Frequency Domain/Convert/MarginContainer/ScrollContainer/PVOCConvertContainer"]
custom_minimum_size = Vector2(660, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "To use the frequency domain processes you must first convert the sound using Analyse and then once you have processed the frequency domain data convert it back to audio again using Resynthesise. For more information on the frequency domain processes, see Help > Tutorials > Frequency Domain."
autowrap_mode = 3

[node name="MarginContainer4" type="MarginContainer" parent="Control/select_effect/Frequency Domain/Convert/MarginContainer/ScrollContainer/PVOCConvertContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 5

[node name="Amplitude and Pitch" type="VBoxContainer" parent="Control/select_effect/Frequency Domain"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="MarginContainer" type="MarginContainer" parent="Control/select_effect/Frequency Domain/Amplitude and Pitch"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="Control/select_effect/Frequency Domain/Amplitude and Pitch/MarginContainer"]
custom_minimum_size = Vector2(660, 425)
layout_mode = 2
size_flags_horizontal = 0
horizontal_scroll_mode = 0

[node name="PVOCAmplitudePitchContainer" type="VBoxContainer" parent="Control/select_effect/Frequency Domain/Amplitude and Pitch/MarginContainer/ScrollContainer"]
custom_minimum_size = Vector2(660, 0)
layout_mode = 2

[node name="Label" type="Label" parent="Control/select_effect/Frequency Domain/Amplitude and Pitch/MarginContainer/ScrollContainer/PVOCAmplitudePitchContainer"]
custom_minimum_size = Vector2(660, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "These processes operate on frequency domain analysis data to alter the loudness and/or pitch of some or all of the sound."
autowrap_mode = 3

[node name="MarginContainer4" type="MarginContainer" parent="Control/select_effect/Frequency Domain/Amplitude and Pitch/MarginContainer/ScrollContainer/PVOCAmplitudePitchContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 5

[node name="Combine" type="VBoxContainer" parent="Control/select_effect/Frequency Domain"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/select_effect/Frequency Domain/Combine"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="Control/select_effect/Frequency Domain/Combine/MarginContainer"]
custom_minimum_size = Vector2(660, 425)
layout_mode = 2
size_flags_horizontal = 0
horizontal_scroll_mode = 0

[node name="PVOCCombineContainer" type="VBoxContainer" parent="Control/select_effect/Frequency Domain/Combine/MarginContainer/ScrollContainer"]
custom_minimum_size = Vector2(660, 0)
layout_mode = 2

[node name="Label" type="Label" parent="Control/select_effect/Frequency Domain/Combine/MarginContainer/ScrollContainer/PVOCCombineContainer"]
custom_minimum_size = Vector2(660, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "These processes take multiple inputs and combine them into one output. This is not mixing in the conventional sense, instead these processes can be used to morph between sounds or create hybrids of sounds."
autowrap_mode = 3

[node name="MarginContainer4" type="MarginContainer" parent="Control/select_effect/Frequency Domain/Combine/MarginContainer/ScrollContainer/PVOCCombineContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 5

[node name="Formants" type="VBoxContainer" parent="Control/select_effect/Frequency Domain"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="MarginContainer" type="MarginContainer" parent="Control/select_effect/Frequency Domain/Formants"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="Control/select_effect/Frequency Domain/Formants/MarginContainer"]
custom_minimum_size = Vector2(660, 425)
layout_mode = 2
size_flags_horizontal = 0
horizontal_scroll_mode = 0

[node name="PVOCFormantsContainer" type="VBoxContainer" parent="Control/select_effect/Frequency Domain/Formants/MarginContainer/ScrollContainer"]
custom_minimum_size = Vector2(660, 0)
layout_mode = 2

[node name="Label" type="Label" parent="Control/select_effect/Frequency Domain/Formants/MarginContainer/ScrollContainer/PVOCFormantsContainer"]
custom_minimum_size = Vector2(660, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "These processes operate on frequency domain analysis data to manipulate or add formants to a sound. Formants are prominent peaks in the frequency spectrum that give sounds part of their timbre. They are essential in speech for discerning different vowel sounds."
autowrap_mode = 3

[node name="MarginContainer4" type="MarginContainer" parent="Control/select_effect/Frequency Domain/Formants/MarginContainer/ScrollContainer/PVOCFormantsContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 5

[node name="Time" type="VBoxContainer" parent="Control/select_effect/Frequency Domain"]
visible = false
layout_mode = 2
metadata/_tab_index = 4

[node name="MarginContainer" type="MarginContainer" parent="Control/select_effect/Frequency Domain/Time"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="Control/select_effect/Frequency Domain/Time/MarginContainer"]
custom_minimum_size = Vector2(660, 425)
layout_mode = 2
size_flags_horizontal = 0
horizontal_scroll_mode = 0

[node name="PVOCTimeContainer" type="VBoxContainer" parent="Control/select_effect/Frequency Domain/Time/MarginContainer/ScrollContainer"]
custom_minimum_size = Vector2(660, 0)
layout_mode = 2

[node name="Label" type="Label" parent="Control/select_effect/Frequency Domain/Time/MarginContainer/ScrollContainer/PVOCTimeContainer"]
custom_minimum_size = Vector2(660, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "These processes operate on frequency domain analysis data to transform something about how a sound evolves over time."
autowrap_mode = 3

[node name="MarginContainer4" type="MarginContainer" parent="Control/select_effect/Frequency Domain/Time/MarginContainer/ScrollContainer/PVOCTimeContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 5

[node name="Spectrum" type="VBoxContainer" parent="Control/select_effect/Frequency Domain"]
layout_mode = 2
metadata/_tab_index = 5

[node name="MarginContainer" type="MarginContainer" parent="Control/select_effect/Frequency Domain/Spectrum"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="Control/select_effect/Frequency Domain/Spectrum/MarginContainer"]
custom_minimum_size = Vector2(660, 425)
layout_mode = 2
size_flags_horizontal = 0
horizontal_scroll_mode = 0

[node name="PVOCSpectrumContainer" type="VBoxContainer" parent="Control/select_effect/Frequency Domain/Spectrum/MarginContainer/ScrollContainer"]
custom_minimum_size = Vector2(660, 0)
layout_mode = 2

[node name="Label" type="Label" parent="Control/select_effect/Frequency Domain/Spectrum/MarginContainer/ScrollContainer/PVOCSpectrumContainer"]
custom_minimum_size = Vector2(660, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "These processes operate on frequency domain analysis data to alter the spectral content of a sound. This can include removing certain frequencies or adding additional frequencies into the sound."
autowrap_mode = 3

[node name="MarginContainer4" type="MarginContainer" parent="Control/select_effect/Frequency Domain/Spectrum/MarginContainer/ScrollContainer/PVOCSpectrumContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 5

[node name="Utilities" type="TabContainer" parent="Control/select_effect"]
visible = false
layout_mode = 2
current_tab = 0
metadata/_tab_index = 2

[node name="SoundThread" type="VBoxContainer" parent="Control/select_effect/Utilities"]
layout_mode = 2
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="Control/select_effect/Utilities/SoundThread"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="Control/select_effect/Utilities/SoundThread/MarginContainer"]
custom_minimum_size = Vector2(660, 425)
layout_mode = 2
size_flags_horizontal = 0
horizontal_scroll_mode = 0

[node name="UtilityContainer" type="VBoxContainer" parent="Control/select_effect/Utilities/SoundThread/MarginContainer/ScrollContainer"]
custom_minimum_size = Vector2(660, 0)
layout_mode = 2

[node name="Label" type="Label" parent="Control/select_effect/Utilities/SoundThread/MarginContainer/ScrollContainer/UtilityContainer"]
custom_minimum_size = Vector2(660, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "The nodes in this section are not part of the Composers Desktop Project. They are small utilities that have been added to SoundThread to help make using CDP slightly easier."
autowrap_mode = 3

[node name="MarginContainer4" type="MarginContainer" parent="Control/select_effect/Utilities/SoundThread/MarginContainer/ScrollContainer/UtilityContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 5

[node name="Favourites" type="TabContainer" parent="Control/select_effect"]
visible = false
layout_mode = 2
current_tab = 0
metadata/_tab_index = 3

[node name="Browse Favourites" type="VBoxContainer" parent="Control/select_effect/Favourites"]
layout_mode = 2
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="Control/select_effect/Favourites/Browse Favourites"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Control/select_effect/Favourites/Browse Favourites/MarginContainer"]
custom_minimum_size = Vector2(660, 420)
layout_mode = 2
size_flags_horizontal = 0

[node name="ScrollContainer" type="ScrollContainer" parent="Control/select_effect/Favourites/Browse Favourites/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="ItemContainer" type="VBoxContainer" parent="Control/select_effect/Favourites/Browse Favourites/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Search" type="TabContainer" parent="Control/select_effect"]
visible = false
layout_mode = 2
current_tab = 0
metadata/_tab_index = 4

[node name="Search for a process in SoundThread" type="VBoxContainer" parent="Control/select_effect/Search"]
layout_mode = 2
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="Control/select_effect/Search/Search for a process in SoundThread"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Control/select_effect/Search/Search for a process in SoundThread/MarginContainer"]
custom_minimum_size = Vector2(660, 420)
layout_mode = 2
size_flags_horizontal = 0

[node name="SearchBar" type="LineEdit" parent="Control/select_effect/Search/Search for a process in SoundThread/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Type to search"

[node name="MarginContainer4" type="MarginContainer" parent="Control/select_effect/Search/Search for a process in SoundThread/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 5

[node name="ScrollContainer" type="ScrollContainer" parent="Control/select_effect/Search/Search for a process in SoundThread/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="ItemContainer" type="VBoxContainer" parent="Control/select_effect/Search/Search for a process in SoundThread/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="about_to_popup" from="." to="." method="_on_about_to_popup"]
[connection signal="tab_changed" from="Control/select_effect" to="." method="_on_select_effect_tab_changed"]
[connection signal="text_changed" from="Control/select_effect/Search/Search for a process in SoundThread/MarginContainer/VBoxContainer/SearchBar" to="." method="_on_search_bar_text_changed"]
